fix : 에러메시지 layout shift

--- a/frontend/src/screens/Join/Join.scss
+++ b/frontend/src/screens/Join/Join.scss
@@ -69,8 +69,8 @@
       color: $RED;
     }
     .dummy {
-      margin-bottom: vw(40px);
-      height: vw(12px);
+      margin-bottom: 40px;
+      height: 12px;
     }
     &__btn {
       margin-bottom: (24px);
